style(taps): fixing css for tap cards
rotating the image causes the css box model to overlap the action buttons
for the card above it.  setting the card overflow to hidden to prevent
this overlap thus allowing a user to update any tap

--- a/public/less/tap.private.less
+++ b/public/less/tap.private.less
@@ -10,6 +10,7 @@
         min-width: 150px;
         max-width: 250px;
         text-align: center;
+        overflow: hidden;
 
         .user-tap-name{
             font-weight: bold;
